added better styling to buttons simplified the delete controllers in the admin folder

--- a/client/app/Admin/addAdversary.html
+++ b/client/app/Admin/addAdversary.html
@@ -11,7 +11,7 @@
                 </p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-block submit" ng-click="$ctrl.addAdversary()">Submit</button>
+                <button type="button" class="btn-primary btn-block submit" ng-click="$ctrl.addAdversary()">Submit</button>
             </div>
         </div>
     </div>
