--- a/client/app/Admin/train.html
+++ b/client/app/Admin/train.html
@@ -59,7 +59,7 @@
             </div>
             <div ng-hide="$ctrl.isFirstPage" class="ng-hide">
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-block submit" ng-click="$ctrl.submitTrainingData()">Submit Training Data</button>
+                    <button type="button" class="btn-primary btn-block submit" ng-click="$ctrl.submitTrainingData()">Submit Training Data</button>
                 </div>
             </div>
         </div>
