--- a/client/app/ProductDetails/editSelectionModal.html
+++ b/client/app/ProductDetails/editSelectionModal.html
@@ -20,7 +20,7 @@
                 </tr>
             </table>
             <div class="modal-footer">
-                <button type="button" class="btn btn-block submit" ng-click="$ctrl.updateThreats()">Update</button>
+                <button type="button" class="btn-primary btn-block submit" ng-click="$ctrl.updateThreats()">Update</button>
             </div>
         </div>
     </div>
