--- a/client/app/ProductOntology/products.html
+++ b/client/app/ProductOntology/products.html
@@ -34,7 +34,7 @@
 
 
 
-<table st-table="vm.displayedCollection" st-safe-src="vm.rowCollection" class="table table-striped productTable">
+<table st-table="vm.displayedCollection" st-safe-src="vm.rowCollection" class="table table-striped productTable table-hover">
     <thead>
         <tr>
             <th colspan="9">
