--- a/client/app/Admin/addProductCat.html
+++ b/client/app/Admin/addProductCat.html
@@ -12,7 +12,7 @@
             </div>
 
             <div class="modal-footer">
-                <button type="button" class="btn btn-block submit" ng-click="$ctrl.addProductCategory()">Submit</button>
+                <button type="button" class="btn-primary btn-block submit" ng-click="$ctrl.addProductCategory()">Submit</button>
             </div>
         </div>
     </div>
