--- a/client/app/Admin/addUser.html
+++ b/client/app/Admin/addUser.html
@@ -27,7 +27,7 @@
                 </p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-block submit" ng-click="$ctrl.addUser()">Submit</button>
+                <button type="button" class="btn-primary btn-block submit" ng-click="$ctrl.addUser()">Submit</button>
             </div>
         </div>
     </div>
