--- a/client/app/Admin/deleteAdversarytype.html
+++ b/client/app/Admin/deleteAdversarytype.html
@@ -1,4 +1,4 @@
-<div class="modal fade" ng-controller="DeleteAdvTypesController as $ctrl">
+<div class="modal fade" ng-controller="GenericDeleteModalController as $ctrl">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -6,8 +6,8 @@
                 <h6 class="modalMessage">Are you sure you want to delete this adversary type?</h6>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn" ng-click="$ctrl.confirmDelete()">Yes</button>
-                <button type="button" class="btn" ng-click="close()" data-dismiss="modal" aria-hidden="true">No</button>
+                <button type="button" class="btn-danger" ng-click="$ctrl.confirmDelete('advType')">Yes</button>
+                <button type="button" class="btn-primary" ng-click="close()" data-dismiss="modal" aria-hidden="true">No</button>
             </div>
         </div>
     </div>
