--- a/client/app/Feeds/editElementModal.html
+++ b/client/app/Feeds/editElementModal.html
@@ -17,7 +17,7 @@
             </div>
 
             <div class="modal-footer">
-                <button type="button" class="btn btn-block submit" ng-click="$ctrl.updateElement()">Submit</button>
+                <button type="button" class="btn-primary btn-block submit" ng-click="$ctrl.updateElement()">Submit</button>
             </div>
         </div>
     </div>
