--- a/client/app/ProductDetails/addThreatModal.html
+++ b/client/app/ProductDetails/addThreatModal.html
@@ -32,7 +32,7 @@
 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-block submit" ng-click="$ctrl.addThreat()">Submit</button>
+                <button type="button" class="btn-primary btn-block submit" ng-click="$ctrl.addThreat()">Submit</button>
             </div>
         </div>
     </div>
