--- a/client/app/ProductOntology/addProduct.html
+++ b/client/app/ProductOntology/addProduct.html
@@ -18,7 +18,7 @@
                 </p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-block submit" ng-click="$ctrl.addProduct()">Submit</button>
+                <button type="button" class="btn-primary btn-block submit" ng-click="$ctrl.addProduct()">Submit</button>
             </div>
         </div>
     </div>
