--- a/client/app/ProductOntology/deleteProduct.html
+++ b/client/app/ProductOntology/deleteProduct.html
@@ -6,8 +6,8 @@
                 <h6 class="modalMessage">Are you sure you want to delete this ontology?</h6>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn" ng-click="$ctrl.confirmDelete()">Yes</button>
-                <button type="button" class="btn" ng-click="close()" data-dismiss="modal" aria-hidden="true">No</button>
+                <button type="button" class="btn-danger" ng-click="$ctrl.confirmDelete()">Yes</button>
+                <button type="button" class="btn-primary" ng-click="close()" data-dismiss="modal" aria-hidden="true">No</button>
             </div>
         </div>
     </div>
