Combined controllers that add elements into one controller

--- a/client/app/Admin/AddFeedType.html
+++ b/client/app/Admin/AddFeedType.html
@@ -1,4 +1,4 @@
-<div class="modal fade" ng-controller="AddFeedTypeController as $ctrl">
+<div class="modal fade" ng-controller="GenericAddModalController as $ctrl">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -12,7 +12,7 @@
             </div>
 
             <div class="modal-footer">
-                <button type="button" class="btn-primary btn-block submit" ng-click="$ctrl.addfeedType()">Submit</button>
+                <button type="button" class="btn-primary btn-block submit" ng-click="$ctrl.addFeedType()">Submit</button>
             </div>
         </div>
     </div>
