--- a/client/app/Admin/addAsset.html
+++ b/client/app/Admin/addAsset.html
@@ -1,4 +1,4 @@
-<div class="modal fade" ng-controller="AddAssetController as $ctrl">
+<div class="modal fade" ng-controller="GenericAddModalController as $ctrl">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
