--- a/client/app/Admin/genericDeleteModal.html
+++ b/client/app/Admin/genericDeleteModal.html
@@ -3,10 +3,10 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="close()" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h6 class="modalMessage">Are you sure you want to delete this attack vector type?</h6>
+                <h6 class="modalMessage">{{$ctrl.message}}</h6>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn-danger" ng-click="$ctrl.confirmDelete('attackVectorType')">Yes</button>
+                <button type="button" class="btn-danger" ng-click="$ctrl.confirmDelete()">Yes</button>
                 <button type="button" class="btn-primary" ng-click="close()" data-dismiss="modal" aria-hidden="true">No</button>
             </div>
         </div>
